--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,15 +15,11 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn package --file pom.xml
-    - name: git latest
-      run: sudo apt-get install git
-    - name : git clone
-      run: git clone https://github.com/sandesh2027/DevOpsClassCodes/
+    - name: config
+      run : git config --global user.email "sandesh.1rn14ec126@gmail.com" && git config --global user.name "sandesh2027"
     - name : copy 
-      run : cp /home/runner/work/DevOpsClassCodes/DevOpsClassCodes/target/addressbook.war DevOpsClassCodes/
-    - name : change directory
-      run: cd DevOpsClassCodes
+      run : cp /home/runner/work/DevOpsClassCodes/DevOpsClassCodes/target/addressbook.war .
     - name : git add and commit
       run : git add . && git commit -m "commit msg"
     - name : git push
-      run : git push https://2c6e85bad8857d93b05bb726f07254c951b8536c@https://github.com/sandesh2027/DevOpsClassCodes.git
+      run : git push https://sandesh2027:2c6e85bad8857d93b05bb726f07254c951b8536c@github.com/sandesh2027/DevOpsClassCodes.git
